SSL2 layer (#885)
* Implemented SSL 2 layer

* Removed SSL2 messages from HandshakeMessage hierarchy

* Renamed abstract test classes

Co-authored-by: mmaehren <32199075+mmaehren@users.noreply.github.com>